--- a/Pages/register.html
+++ b/Pages/register.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="flex sm:hidden gap-[7px] items-center">
                     <a href="./search.html">
-                        <img src="./assets/header/search2.svg" alt="search">
+                        <img src="../assets/header/search2.svg" alt="search">
                     </a>
                 </div>
                 <div class="hidden md:flex">
@@ -218,7 +218,7 @@
     <main>
         <section>
             <div
-                class="container mx-auto px-[20px] pt-[135px] sm:pt-[160px] pb-[50px] sm:pb-[220px] flex items-center justify-center">
+                class="container mx-auto px-[20px] pt-[100px] sm:pt-[160px] pb-[50px] sm:pb-[220px] flex items-center justify-center">
                 <div class="max-w-[502px] w-full bg-[white] rounded-[5px] px-[18px] py-[25px]">
                     <div class="flex items-center justify-center">
                         <svg width="40" height="32" viewBox="0 0 40 32" fill="none" xmlns="http://www.w3.org/2000/svg">
