--- a/Pages/companiy.html
+++ b/Pages/companiy.html
@@ -114,12 +114,24 @@
                     <p>Category</p>
                 </a>
                 <a href="./cart.html">
-                        <div class="flex cursor-pointer relative items-center flex-col gap-[7px]">
-                            <img src="../assets/header/shopping-cart.svg" alt="shopping-cart">
-                            <span id="badge2"
-                                class="absolute top-[-5px] left-[30px] w-[11.28px] h-[11px] bg-[#FF6633] text-white rounded-[4px] flex items-center justify-center px-[4px] py-[2px] text-[9px]">0</span>
-                            <p>Корзина</p>
-                        </div>
+                    <div class="flex cursor-pointer items-center flex-col gap-[7px]">
+                        <svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M5.5 25C5.5 23.6193 6.61929 22.5 8 22.5C9.38071 22.5 10.5 23.6193 10.5 25C10.5 26.3807 9.38071 27.5 8 27.5C6.61929 27.5 5.5 26.3807 5.5 25ZM8 23.5C7.17157 23.5 6.5 24.1716 6.5 25C6.5 25.8284 7.17157 26.5 8 26.5C8.82843 26.5 9.5 25.8284 9.5 25C9.5 24.1716 8.82843 23.5 8 23.5Z"
+                                fill="#414141" />
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M17.5 25C17.5 23.6193 18.6193 22.5 20 22.5C21.3807 22.5 22.5 23.6193 22.5 25C22.5 26.3807 21.3807 27.5 20 27.5C18.6193 27.5 17.5 26.3807 17.5 25ZM20 23.5C19.1716 23.5 18.5 24.1716 18.5 25C18.5 25.8284 19.1716 26.5 20 26.5C20.8284 26.5 21.5 25.8284 21.5 25C21.5 24.1716 20.8284 23.5 20 23.5Z"
+                                fill="#414141" />
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M1 4.5C0.723858 4.5 0.5 4.72386 0.5 5C0.5 5.27614 0.723858 5.5 1 5.5H4.58051C5.33783 9.79147 6.10333 14.0643 6.74931 18.3709C6.93288 19.5947 7.98416 20.5 9.22165 20.5H19.3597C20.5514 20.5 21.5774 19.6588 21.8111 18.4903L23.2503 11.2942C23.436 10.366 22.726 9.5 21.7795 9.5H7.16046C6.8575 9.5 6.57797 9.58901 6.34436 9.74093L5.49239 4.91311C5.45023 4.67418 5.24262 4.5 5 4.5H1ZM6.666 11.0742C6.62065 10.7719 6.85478 10.5 7.16046 10.5H21.7795C22.095 10.5 22.3316 10.7887 22.2698 11.0981L20.8305 18.2942C20.6903 18.9953 20.0747 19.5 19.3597 19.5H9.22165C8.47916 19.5 7.84839 18.9568 7.73825 18.2225L6.666 11.0742Z"
+                                fill="#414141" />
+                            <rect x="11.8604" width="11.28" height="11" rx="4" fill="#FF6633" />
+                            <path
+                                d="M18.3804 9C18.3137 9 18.257 8.98 18.2104 8.94C18.1704 8.89333 18.1504 8.83667 18.1504 8.77V3.17L16.4904 4.45C16.4437 4.49 16.3937 4.51 16.3404 4.51C16.2804 4.51 16.2237 4.47667 16.1704 4.41L15.9104 4.08C15.877 4.03333 15.8604 3.98667 15.8604 3.94C15.8604 3.86 15.8937 3.79667 15.9604 3.75L18.1404 2.07C18.2137 2.02333 18.3004 2 18.4004 2H18.9104C18.977 2 19.0304 2.02333 19.0704 2.07C19.117 2.11 19.1404 2.16333 19.1404 2.23V8.77C19.1404 8.83667 19.117 8.89333 19.0704 8.94C19.0304 8.98 18.977 9 18.9104 9H18.3804Z"
+                                fill="white" />
+                        </svg>
+                        <p>Корзина</p>
+                    </div>
                 </a>
             </div>
             <div id="register-head" class="hidden lg:flex flex items-center cursor-pointer gap-[10px]">
@@ -238,30 +250,41 @@
 
     <main>
         <section>
-            <div class="container mx-auto px-[20px] pt-[94px] 2xl:px-[127px]">
-                <div class="flex items-center justify-between">
-                    <h1 class="font-bold text-[24px] sm:text-[36px]">Акции</h1>
+            <div class="container mx-auto px-[20px] pt-[85px] sm:pt-[110px] 2xl:px-[127px]">
+                <div class="flex items-center  gap-[8px]">
+                    <a href="../index.html">
+                        Главная
+                    </a>
+                    <svg width="7" height="13" viewBox="0 0 7 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M0.146447 0.146447C0.341709 -0.0488155 0.658291 -0.0488155 0.853553 0.146447L6.85355 6.14645C7.04882 6.34171 7.04882 6.65829 6.85355 6.85355L0.853553 12.8536C0.658291 13.0488 0.341709 13.0488 0.146447 12.8536C-0.0488155 12.6583 -0.0488155 12.3417 0.146447 12.1464L5.79289 6.5L0.146447 0.853553C-0.0488155 0.658291 -0.0488155 0.341709 0.146447 0.146447Z"
+                            fill="#606060" />
+                    </svg>
+                    <a href="./companiy.html">
+                        О компании
+                    </a>
                 </div>
-                <div
-                    class="discount_product grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
-
+                <div>
+                    <h1 class="text-[30px] sm:text-[44px] md:text-[64px] font-bold pt-[4px]">Контакты</h1>
                 </div>
             </div>
         </section>
 
         <section>
-            <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px] 2xl:px-[127px] pb-[40px] sm:pb-[80px]">
-                <div class="flex items-center justify-between">
-                    <h1 class="font-bold text-[24px] sm:text-[36px]">Новинки</h1>
-                </div>
-                <div
-                    class="new-products grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
-
+            <div class="mx-auto  px-[20px] container mx-auto px-[20px] pt-[24px] sm:pt-[44px] 2xl:px-[127px]">
+                <div>
+                    <div>
+                        <h1 class="text-[64px] font-bold">О компании</h1>
+                        <p class="text-[24px] text-[#FF6633] pt-[16px]"> Мы непрерывно развиваемся и <br> работаем над
+                            совершенствованием сервиса, <br> заботимся о
+                            наших
+                            клиентах, <br> стремимся к лучшему будущему.</p>
+                    </div>
                 </div>
             </div>
         </section>
-
     </main>
+
 
     <footer
         class="bg-[url('/assets/header/pattern2.png')] py-[18px] sm:py-[25px]  bg-[#F9F4E2] pb-[100px] sm:pb-[15px]">
@@ -322,7 +345,6 @@
             </div>
         </div>
     </footer>
-
 
     <div
         class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[20px] z-[900]">
@@ -393,13 +415,11 @@
     </div>
 
 
-
     <script src="../products-data/products-data.js"></script>
-    <script src="../js/loading.js"></script>
-    <script src="../js/all.js"></script>
-    <script src="../js/search-input.js"></script>
-    <script src="../js/main.js"></script>
     <script src="../js/main_2.js"></script>
+    <script src="../js/search-input.js"></script>
+    <script src="../js/loading.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
