--- a/Pages/search.html
+++ b/Pages/search.html
@@ -88,7 +88,6 @@
         </section>
     </main>
 
-
     <div
         class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[20px] z-[900]">
         <a class="flex flex-col items-center" href="../index.html">
@@ -124,25 +123,23 @@
 
                 <p class="text-[11px]">Заказы</p>
             </a>
-            <a href="./cart.html" class="flex items-center flex-col">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M12.7046 4.25644C13.8299 3.13067 15.3564 2.49817 16.9482 2.49817C18.5399 2.49817 20.0664 3.13063 21.1916 4.25636C22.3174 5.38164 22.95 6.90829 22.95 8.49999C22.95 10.0917 22.3175 11.6183 21.1917 12.7435C21.1917 12.7436 21.1917 12.7435 21.1917 12.7435L12.3517 21.5835C12.1565 21.7788 11.8399 21.7788 11.6446 21.5835L2.80461 12.7435C0.460963 10.3999 0.460963 6.60009 2.80461 4.25644C5.14826 1.91279 8.94807 1.91279 11.2917 4.25644L11.9982 4.96289L12.7046 4.25644C12.7046 4.25641 12.7046 4.25647 12.7046 4.25644ZM16.9482 3.49817C15.6217 3.49817 14.3496 4.02528 13.4118 4.96346L12.3517 6.02355C12.258 6.11732 12.1308 6.16999 11.9982 6.16999C11.8656 6.16999 11.7384 6.11732 11.6446 6.02355L10.5846 4.96355C8.63149 3.01042 5.46484 3.01042 3.51172 4.96355C1.55859 6.91667 1.55859 10.0833 3.51172 12.0364L11.9982 20.5229L20.4846 12.0364C21.4228 11.0987 21.95 9.82648 21.95 8.49999C21.95 7.17351 21.4229 5.90138 20.4847 4.96363C19.5469 4.02544 18.2747 3.49817 16.9482 3.49817Z"
-                        fill="#414141" />
-                </svg>
-
+            <a href="./like.html" class="flex cursor-pointer relative items-center flex-col gap-[0px]">
+                <img class="w-[20px] h-[20px]" src="../assets/images/layk/heart-1.svg" alt="heart">
+                <span id="like-badge-01"
+                    class="absolute top-[-5px] left-[35px] w-[11.28px] h-[11px] bg-[#FF6633] text-white rounded-[4px] flex items-center justify-center px-[4px] py-[2px] text-[9px]">0</span>
                 <p class="text-[11px]">Избранное</p>
             </a>
             <a href="./cart.html" class="flex items-center flex-col">
                 <div class="flex cursor-pointer relative items-center flex-col gap-[0px]">
                     <img class="w-[20px] h-[20px]" src="../assets/header/shopping-cart.svg" alt="shopping-cart">
-                    <span id="badge-single-2"
+                    <span id="badge-01"
                         class="absolute top-[-5px] left-[30px] w-[11.28px] h-[11px] bg-[#FF6633] text-white rounded-[4px] flex items-center justify-center px-[4px] py-[2px] text-[9px]">0</span>
                     <p class="text-[11px]">Корзина</p>
                 </div>
-                <a href="./register.html">
-                    <img class="w-[28px] h-[28px]" src="../assets/header/avatar (8).png" alt="avatar">
-                </a>
+            </a>
+            <a href="./register.html">
+                <img class="w-[28px] h-[28px]" src="../assets/header/avatar (8).png" alt="avatar">
+            </a>
     </div>
 
     <script src="../products-data/products-data.js"></script>
