--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -250,7 +250,7 @@
                 </div>
                 <div class="grid grid-cols-1 xl:flex items-start justify-between gap-[25px]">
                     <div class="cart-map pt-[24px] flex flex-col max-w-[936px] w-full gap-[24px]">
-
+                   
                     </div>
                     <div
                         class="sticky z-100 w-full top-30 right-35 max-w-[920px] xl:max-w-[420px] mt-[20px] w-full pt-[30px] sm:pt-[0px]">
@@ -266,17 +266,18 @@
                         <div class="flex flex-col gap-[10px] pt-[14px] sm:pt-[24px] pb-[14px] sm:pb-[24px]">
                             <div class="flex items-center justify-between">
                                 <p class="text-[#8F8F8F] text-[14px] sm:text-[16px]">3 товара</p>
-                                <p  class="font-bold text-[14px] sm:text-[16px]"><span id="all-price">258,10</span>₽</p>
+                                <p class="font-bold text-[14px] sm:text-[16px]"><span id="all-price">258,10</span>₽</p>
                             </div>
                             <div class="flex items-center justify-between">
                                 <p class="text-[#8F8F8F] text-[14px] sm:text-[16px]">Скидка</p>
-                                <p  class="text-[#FF6633] text-[14px] sm:text-[16px] font-bold"><span id="all-discount">-8,01</span>₽</p>
+                                <p class="text-[#FF6633] text-[14px] sm:text-[16px] font-bold"><span
+                                        id="all-discount">-8,01</span>₽</p>
                             </div>
                         </div>
                         <hr class="text-[#F3F2F1]">
                         <div class="flex items-center justify-between pt-[14px] sm:pt-[24px]">
                             <p class="text-[#8F8F8F] text-[14px] sm:text-[16px]">Итог</p>
-                            <h1  class="text-[18px] sm:text-[24px] font-bold"><span id="all-paind">250,09 </span>₽ </h1>
+                            <h1 class="text-[18px] sm:text-[24px] font-bold"><span id="all-paind">250,09 </span>₽ </h1>
                         </div>
                         <div class="flex items-center justify-center gap-[5px] pt-[4px] sm:pt-[8px]">
                             <img src="../assets/single/smile.png" alt="smile">
