--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px] 2xl:px-[127px]">
                 <div class="flex items-center justify-between">
                     <h1 class="font-bold text-[24px] sm:text-[36px]">Новинки</h1>
-                    <a href="./Pages/all_products_new.html">
+                    <a href="./Pages/all_products_discount.html">
                         <div class="text-[12px] sm:text-[16px] flex items-center gap-[7px]">
                             <p class="text-[#8F8F8F]">Все продукты</p>
                             <svg width="7" height="13" viewBox="0 0 7 13" fill="none"
