--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <!-- <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center    ">
+    <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center    ">
         <div class="relative">
             <img src="./assets/loading/loading.svg" alt="loading">
             <div>
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-    </div> -->
+    </div>
 
     <header class="py-[16px] bg-[white] fixed z-[100] w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
         <div class="container mx-auto px-[20px] gap-[40px] 2xl:px-[127px] flex items-center justify-between">
@@ -455,12 +455,12 @@
 
                 <p class="text-[11px]">Заказы</p>
             </a>
-             <a href="./Pages/like.html" class="flex cursor-pointer relative items-center flex-col gap-[0px]">
-                    <img class="w-[20px] h-[20px]" src="./assets/images/layk/heart-1.svg" alt="heart">
-                    <span id="like-badge-2"
-                        class="absolute top-[-5px] left-[35px] w-[11.28px] h-[11px] bg-[#FF6633] text-white rounded-[4px] flex items-center justify-center px-[4px] py-[2px] text-[9px]">0</span>
-                    <p class="text-[11px]">Избранное</p>
-                </a>
+            <a href="./Pages/like.html" class="flex cursor-pointer relative items-center flex-col gap-[0px]">
+                <img class="w-[20px] h-[20px]" src="./assets/images/layk/heart-1.svg" alt="heart">
+                <span id="like-badge-2"
+                    class="absolute top-[-5px] left-[35px] w-[11.28px] h-[11px] bg-[#FF6633] text-white rounded-[4px] flex items-center justify-center px-[4px] py-[2px] text-[9px]">0</span>
+                <p class="text-[11px]">Избранное</p>
+            </a>
             <a href="./Pages/cart.html" class="flex items-center flex-col">
                 <div class="flex cursor-pointer relative items-center flex-col gap-[0px]">
                     <img class="w-[20px] h-[20px]" src="./assets/header/shopping-cart.svg" alt="shopping-cart">
